4B/cs444/tests/pass/pass_publicclasses.joos
/* pass: public classes */
public class A {
  public A() {}
}

