4B/cs444/tests/fail/fail_explicitsupercall.joos
/* fail: explicit super call */
public class A {
  public A() {  super(); }
}

